﻿shmuel 09.03.2014 15:08:27 +0200 - build 3825

1. Из форума: DI_FIXEDIT + DIF_HISTORY для строк больше двух символов.
   (Наличие флага DIF_HISTORY позволяло ввести на 1 символ больше, чем длина поля ввода).

shmuel 08.03.2014 23:07:41 +0200 - build 3824

1. Из форума: Неверный результат работы FSF.TruncStr().

zg 08.03.2014 18:40:47 +0200 - build 3823

1. уточнение 3821. для DM_GETFOCUS и DM_LISTADDSTR в случае отсутствия диалога возвращается -1.

drkns 07.03.2014 02:38:36 +0200 - build 3822

1. VC10 fix.

2. Warning.

zg 07.03.2014 02:13:56 +0200 - build 3821

1. 0002614: SendDlgMessage: не падать при невалидном hDlg.

drkns 05.03.2014 22:41:01 +0200 - build 3820

1. 0002604: Translate in file menu Add, Subtract, Multiply...

drkns 04.03.2014 01:22:32 +0200 - build 3819

1. С форума: преобразование длинных имен в короткие не работало для имен длиннее 255 символов.

2. Рефакторинг.

shmuel 02.03.2014 09:53:50 +0200 - build 3818

1. Кастомная сортировка в панелях: индикатор сортировки в некоторых ситуациях не устанавливался на пустой панели.

shmuel 21.02.2014 18:11:56 +0200 - build 3817

1. M#0002607. Ещё одно уточнение.

svs 21.02.2014 08:05:46 +0400 - build 3816

1. Mantis#0002607. Уточнение.
   DM_SETITEMPOSITION вернёт false, если координаты заданы неверно.

svs 20.02.2014 21:33:03 +0400 - build 3815

1. Mantis#0002607: DM_SETITEMPOSITION вызывает падение Фара, если Right < Left - 1

w17 19.02.2014 16:59:31 +0400 - build 3814

1. M#2605: Освобождение памяти после редактирования

w17 18.02.2014 18:54:03 +0400 - build 3813

1. fix $#nn (с форума)

drkns 17.02.2014 22:47:09 +0200 - build 3812

1. 0002603: Падение по вызове FCTL_GETCURRENTPANELITEM на PTYPE_QVIEWPANEL и PTYPE_INFOPANEL

2. Рефакторинг.

drkns 17.02.2014 00:03:05 +0200 - build 3811

1. Уточнение 3810.

drkns 16.02.2014 19:18:25 +0200 - build 3810

1. Некорректно устанавливались флаги 0x10 и 0x20 в Editor.State.

2. Некорректно переключался язык интерфейса.

3. Рефакторинг.
